# dataset

./: .bazelignore  .bazelrc  .gitignore  BUILD  BUILD_REPORT.txt  CHEATSHEET.md  CMakeLists.txt  DEVELOPER.md  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCED_LOGGING.md  ENHANCED_LOGGING_QUICK_REFERENCE.md  ETHICS.md  FEATURE_COMPLETION.md  FINAL_STATUS.txt  HOW_TO_CRAWL_YOUR_SITE.md  IMPLEMENTATION_FEATURES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INDEX.md  LICENSE  LINK_EXTRACTION_SUMMARY.md  LOGGING.md  MIGRATION_STATUS.md  Makefile  QUICKSTART.md  QUICKSTART_GUIDE.sh  README.md  ROBOTS_UA_PRIORITY_REPORT.md  ROBOTS_UA_PRIORITY_SUMMARY.md  SETUP.md  START_HERE.txt  SUMMARY.md  TEST_RESULTS_SUMMARY.txt  USAGE.md  WILDCARD_IMPLEMENTATION_REPORT.txt  WILDCARD_PATH_MATCHING_QUICK_REFERENCE.md  WORKSPACE  config.json  docker-compose.yml  (+12 more)
docs/guides/: BUILDING.md  MIGRATION.md  TESTING.md
docs/v2.7/: README.md  ROBOTS_UA_PRIORITY.md  WILDCARD_PATH_MATCHING.md
docs/v3.0/: ARCHITECTURE.md  FEATURES.md  QUICK_START.md  README.md  STATUS.md
examples/: advanced_logs.cpp  ethical_crawler.cpp  examples.cpp  logging_demo.cpp  robots_ua_priority.cpp
include/: clickhouse_client.h  config_loader.h  crawler.h  dataset_writer.h  http_config.h  logger.h  raw_socket_http.h  rocksdb_manager.h  text_extractor.h
output/: dataset.csv
scripts/: analyze_ethics.py  parquet_utils.py
src/: clickhouse_client.cpp  config_loader.cpp  crawler.cpp  dataset_writer.cpp  logger.cpp  main.cpp  raw_socket_http.cpp  rocksdb_manager.cpp  text_extractor.cpp
tests/: robots_integration_test.cc  robots_ua_priority_test.cc  robots_wildcard_test.cc  rocksdb_test.cc  text_extractor_test.cc
